--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,7 @@ serde = "1.0.195"
 serde_json = "1.0"
 chrono = "0.4.31"
 toml = "0.2.1"
+rocket_firebase_auth = "0.5.0"
 
 [dependencies.rocket_dyn_templates]
 version = "0.1.0-rc.1"
